# mujina

./: Cargo.toml  PROMPT.md  README.md
.githooks/: pre-commit
docs/: architecture.md
mujina-miner/: Cargo.toml
mujina-miner/src/: backplane.rs  daemon.rs  job_generator.rs  lib.rs  scheduler.rs  tracing.rs  u256.rs
mujina-miner/src/asic/: hash_thread.rs  mod.rs
mujina-miner/src/asic/bm13xx/: PROTOCOL.md  crc.rs  mod.rs  protocol.rs  test_data.rs  thread.rs
mujina-miner/src/board/: README.md  bitaxe.rs  bitaxe_gamma.md  cpu.rs  emberone.rs  mod.rs
mujina-miner/src/chip/: bm13xx.rs  mod.rs
mujina-miner/src/chip/bm13xx/: PROTOCOL.md  crc.rs  error.rs  mod.rs  protocol.rs
mujina-miner/src/cpu_miner/: config.rs  hasher.rs  mod.rs  thread.rs
mujina-miner/src/hash_thread/: bm13xx.rs  mod.rs  task.rs
mujina-miner/src/hw_trait/: adc.rs  gpio.rs  i2c.rs  mod.rs
mujina-miner/src/job_source/: forced_rate.rs  mod.rs  stratum_v1.rs
mujina-miner/src/mgmt_protocol/bitaxe_raw/: mod.rs
mujina-miner/src/peripheral/: emc2101.rs  pmbus.rs  tps546.rs
mujina-miner/src/peripheral/pmbus/: pmbus_types.rs
mujina-miner/src/stratum_v1/: client.rs  messages.rs
mujina-miner/src/transport/: cpu.rs  mod.rs  usb.rs
mujina-miner/src/transport/usb/: linux.rs
mujina-miner/src/types/: bitcoin_impls.rs  difficulty.rs  mod.rs
tools/mujina-dissect/: README.md
tools/mujina-dissect/src/: bm13xx.rs  capture.rs  dissect.rs  main.rs  output.rs  serial.rs
