[package]
name = "mujina-miner"
version = "0.1.0"
edition = "2024"

[dependencies]
# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["time", "local-time"] }
tracing-journald = { workspace = true }
time = { workspace = true, features = ["macros"] }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }

bytes = { workspace = true }
bitvec = { workspace = true }
crc_all = { workspace = true }
tokio-serial = { workspace = true }
futures = { workspace = true }
strum = { workspace = true }
test-case = { workspace = true }
modular-bitfield = { workspace = true }
